spade-tests/src/snapshots/spade_tests__hir_lowering__argument_list_tests__long_fake_named_arg.snap
---
source: spade-tests/src/hir_lowering.rs
---
extern fn test(a: bool, b: bool) -> bool;
fn main() -> bool {
    test(a: true, c: true, b: true)
}


error: No such argument: c
  ┌─ testinput:3:19
  │
1 │ extern fn test(a: bool, b: bool) -> bool;
  │ ----------------------------------------- function defined here
2 │ fn main() -> bool {
3 │     test(a: true, c: true, b: true)
  │                   ^ No such argument
