spade-tests/src/snapshots/spade_tests__hir_lowering__argument_list_tests__long_named_argument_missing.snap
---
source: spade-tests/src/hir_lowering.rs
---
extern fn test(a: bool, b: bool) -> bool;
fn main() -> bool {
    test(a: true)
}


error: Missing argument: b
  ┌─ testinput:3:9
  │
1 │ extern fn test(a: bool, b: bool) -> bool;
  │ ----------------------------------------- function defined here
2 │ fn main() -> bool {
3 │     test(a: true)
  │         ^^^^^^^^^ Missing argument: b
