spade-tests/src/snapshots/spade_tests__hir_lowering__argument_list_tests__shorthand_named_argument_missing.snap
---
source: spade-tests/src/hir_lowering.rs
---
extern fn test(a: bool, b: bool) -> bool;
fn main() -> bool {
    let (a, b, c) = (true, true, true);
    test(a:)
}


error: Missing argument: b
  ┌─ testinput:4:9
  │
1 │ extern fn test(a: bool, b: bool) -> bool;
  │ ----------------------------------------- function defined here
  ·
4 │     test(a:)
  │         ^^^^ Missing argument: b
