spade-tests/src/snapshots/spade_tests__hir_lowering__argument_list_tests__zeroextending_to_shorter_value_single_bit.snap
---
source: spade-tests/src/hir_lowering.rs
---
fn main() -> uint<1> {
    let a: uint<2> = 0;
    let b: uint<1> = std::num::zext(a);
    b
}


error: Expected M >= 2 but M is 1 
  ┌─ testinput:3:22
  │
3 │     let b: uint<1> = std::num::zext(a);
  │                      ^^^^^^^^^^^^^^^^^ Expected M >= 2, but M is 1
  │
  = note: Zero-extend result must be wider than the input value
